# glidesh

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/container-app/: README.md  inventory.kdl  plan.kdl
examples/disk-management/: README.md  inventory.kdl  plan.kdl
examples/external-module/: README.md  plan.kdl
examples/external-module/modules/: glidesh-module-example-motd
examples/hello-echo/: README.md  inventory.kdl  plan.kdl
examples/host-module/: README.md  inventory.kdl  plan.kdl
examples/jump-host/: README.md  inventory.kdl  plan.kdl
examples/multi-tier/: README.md  inventory.kdl  plan.kdl
examples/multi-tier/common/: base.kdl
examples/nix-deploy/: inventory.kdl  plan.kdl
examples/run-as/: README.md  inventory.kdl  plan.kdl
examples/shared-token/: README.md  inventory.kdl  plan.kdl
examples/user-setup/: README.md  inventory.kdl  plan.kdl
examples/user-setup/files/: authorized_keys
examples/web-server/: README.md  inventory.kdl  plan.kdl
examples/web-server/files/: nginx.conf
src/: cli.rs  error.rs  lib.rs  main.rs  util.rs
src/config/: inventory.rs  mod.rs  plan.rs  template.rs  types.rs
src/executor/: engine.rs  host_coordinator.rs  mod.rs  node_runner.rs  result.rs
src/logging/: mod.rs  storage.rs
src/modules/: container.rs  context.rs  detect.rs  disk.rs  escalation.rs  file.rs  host.rs  mod.rs  nix.rs  package.rs  shell.rs  systemd.rs  user.rs
src/ssh/: connection.rs  handler.rs  mod.rs  pool.rs  session_pool.rs  tunnel.rs
src/tui/: console.rs  logs_explorer.rs  mod.rs  shell_tui.rs  state.rs  tunnel_store.rs  widgets.rs
tests/: Dockerfile  integration_container.rs  integration_detect.rs  integration_disk.rs  integration_file.rs  integration_package.rs  integration_plan.rs  integration_run_as.rs  integration_sandbox.rs  integration_shell.rs  integration_systemd.rs  integration_user.rs
tests/common/: mod.rs
website/: astro.config.mjs  netlify.toml  package-lock.json  package.json
website/src/content/docs/: index.mdx  (+1 more)
website/src/styles/: custom.css
(+26 files in other folders)
