[package]
name = "glidesh"
version = "0.1.0"
edition = "2024"
description = "Fast, stateless, SSH-only infrastructure automation"
license = "MIT"
rust-version = "1.85"

[dependencies]
russh = "0.49"
russh-keys = "0.49"
kdl = "6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
ssh-key = "0.6.7"
russh-sftp = "2.1"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
rand = "0.8"
